tests/failing/reference_return.tails
func a() -> &int:
  &123

func tests() -> unit:
  discard a()
